Code Cleanup, Remove Unused Imports and code migrated to Java 17.